# CHS-SDK

./: .gitignore  AGENTS.md  AGENT_ARCHITECTURE.md  PHYSICAL_UNITS.md  README.md  distributed_computing_architecture.md  example_branched_network.py  example_hierarchical_control.py  example_mas_simulation.py  example_multi_gate_river.py  example_pipe_simulation.py  example_pump_valve_simulation.py  example_simulation.py  example_with_disturbance.py  plant_data.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/: server.py
examples/: branched_network_zh.ipynb  canal_diversion_simulation.json  canal_diversion_simulation_zh.ipynb  data_driven_simulation.json  data_driven_simulation_zh.ipynb  data_processing_and_evaluation.json  data_processing_and_evaluation_zh.ipynb  forecasting_and_warning.json  forecasting_and_warning_zh.ipynb  hierarchical_control.json  hierarchical_control_with_disturbance.json  hierarchical_control_with_disturbance_zh.ipynb  hierarchical_control_zh.ipynb  hierarchical_mpc_control_case_study.json  hierarchical_mpc_control_case_study_zh.ipynb  hydropower_simulation.json  hydropower_simulation_zh.ipynb  hydropower_station_scheduling.json  hydropower_station_scheduling_zh.ipynb  integrated_basin_scheduling.json  integrated_basin_scheduling_zh.ipynb  lstm_forecasting.json  lstm_forecasting_zh.ipynb  main_tutorial_zh.ipynb  mas_simulation.json  mas_simulation_zh.ipynb  mission_1_1_physical_model.json  mission_1_2_physical_io_agent.json  mission_1_3_gate_control_agent.json  mission_1_4_digital_twin_agent.json  mission_2_2_sim.json  (+37 more)
(+456 files in other folders)
