[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swp"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "Smart Water Platform (SWP) - A Digital Twin & MAS Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["swp*"]
