[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swp"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "Smart Water Platform (SWP) - A Digital Twin & MAS Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "statsmodels>=0.13.0",
    "torch>=1.10.0",
    "scikit-learn>=1.0",
    "matplotlib>=3.4.0",
]

[tool.setuptools.packages.find]
include = ["swp*"]
